<resources>
    <string name="app_name">GenRatr</string>
    <string name="title_feed">Feed</string>
    <string name="title_challenge">Challenges</string>
    <string name="title_map">Map</string>
    <string name="title_leaderboard">Leaderboards</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_challenge">Challenges</string>
    <string name="menu_map">Map</string>
    <string name="menu_leaderboard">Leaderboards</string>
    <string name="achievements">Achievements</string>
    <string name="score">Score:</string>
    <string name="title_activity_profile_settings">Profile Settings</string>

    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>

    <!-- Messages Preferences -->
    <string name="username_title">Username</string>
    <string name="bio_title">Bio</string>
    <string name="cover_colour_title">Cover Colour</string>

    <string name="title_activity_leaderboards">Leaderboards</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button">O</string>
    <string name="great_you_ve_login">Great, you\'ve logged in!</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_home">Feed</string>
    <string name="title_dashboard">Challenges</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profile">Profile</string>
    <string name="level_prompt">Select a level...</string>
    <string name="title_activity_challenge_details">ChallengeDetails</string>
    <string name="action_settings">Settings</string>
    <string name="player_score">Player Score:</string>
    <string name="points">pts</string>
    <string name="title_activity_create_challenge">CreateChallenge</string>
    <string name="complete_challenge">Complete Challenge</string>
    <string name="tag">Tag:</string>
    <string name="pick_date">Pick end date:</string>
    <string name="location">Location:</string>
    <string name="challenge_level">Level:</string>
    <string name="create">Create</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="yellow">yellow</string>
    <string name="set_colour">set colour</string>
    <string name="title_activity_new_challenge_location">Map</string>
    <string name="set_location">SET LOCATION</string>
    <string name="global">Global</string>
    <string name="pick_location">Pick a location</string>
    <string name="days_left">days left</string>
    <string name="deadline">Deadline:</string>
    <string name="challenge_name">Challenge Name</string>


</resources>
