<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile_header">

        <EditTextPreference
            app:key="username"
            app:title="@string/username_title"
            app:summary="Your username"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="bio"
            app:title="@string/bio_title"
            app:summary="Bio"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="cover_colour"
            app:summary="Your cover colour"
            app:title="@string/cover_colour_title"
            app:entries="@array/colour_entries"
            app:entryValues="@array/colour_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
