<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.example.demo.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_challenges"
        android:name="com.example.demo.ui.challenges.ChallengesFragment"
        android:label="@string/title_challenge"
        tools:layout="@layout/fragment_challenges" />

    <fragment
        android:id="@+id/navigation_leaderboards"
        android:name="com.example.demo.ui.leaderboards.LeaderboardsFragment"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/fragment_leaderboards" />
</navigation>