<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.demo.Login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="65dp"

        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:autoText="false"
        android:text="Genϟratr"
        android:textColor="@color/AndroidGreen"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:textColor="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toLeftOf="@+id/editText2"
        app:layout_constraintRight_toRightOf="@+id/editText2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_editor_absoluteX="-15dp"
        tools:layout_editor_absoluteY="152dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:textColor="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/AndroidGreen"
        android:paddingLeft="10dp"
        android:text="@string/login"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/AndroidGreen"
        android:layout_margin="20dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/button"/>

</LinearLayout>