<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCAAAAAA"
        android:columnCount="2"
        android:orientation="vertical"
        android:padding="50dp"
        android:rowCount="4">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:contentPadding="20dp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/red_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/BaraRed"
                    android:onClick="pickColour"
                    android:text="@string/red"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/green_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_margin="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/PixelatedGrass"
                    android:onClick="pickColour"
                    android:text="@string/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/blue_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/CircumorbitalRings"
                    android:onClick="pickColour"
                    android:text="@string/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/red_button" />

                <Button
                    android:id="@+id/yellow_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_margin="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/Energos"
                    android:onClick="pickColour"
                    android:text="@string/yellow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/green_button" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="setColour"
                    android:text="@string/set_colour"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/button4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout2">

                    <EditText
                        android:id="@+id/edit_red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        tools:text="0" />

                    <EditText
                        android:id="@+id/edit_green"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        tools:text="0" />

                    <EditText
                        android:id="@+id/edit_blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        tools:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/red"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/green"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/blue"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>